--- a/SRC/02_read_sisdepen_files.ipynb
+++ b/SRC/02_read_sisdepen_files.ipynb
@@ -23,11 +23,11 @@
       },
       "source": [
         "# Pacotes\n",
-        "import pandas as pd\n",
-        "import os\n",
-        "import shutil"
+        "import pandas as pd    # manipulação de planilhas e data.frames\n",
+        "import os              # manipulação de arquivos\n",
+        "import shutil          # comprimir arquivos"
       ],
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -36,6 +36,7 @@
         "id": "s43I0ag_ozCP"
       },
       "source": [
+        "# Função que pega as linhas do obj que tem a string de interesse e acrescenta var uf, mes, ano e var (eu criei)\n",
         "def filtrar_linhas(obj, string, uf, mes, ano, var):\n",
         "  obj_fin = obj[obj['var1'].str.contains(string, na = False)].dropna(axis = 'columns')\n",
         "\n",
@@ -43,9 +44,13 @@
         "  obj_fin['mes'] = mes\n",
         "  obj_fin['ano'] = ano\n",
         "  obj_fin['var'] = var\n",
+        "\n",
+        "  if var == 'psico':\n",
+        "    obj_fin = obj_fin[obj_fin['var4'] == 'Total']\n",
+        "\n",
         "  return obj_fin"
       ],
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -55,15 +60,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WYtTkSS7mrMT",
-        "outputId": "b73c444a-6c11-46d8-b4f3-eaf040ad03c4"
+        "outputId": "61b20018-bf12-4424-b969-9c9a3bbcd685"
       },
       "source": [
-        "arqs = os.listdir('arqs_sisdepen')\n",
+        "# Usaremos apenas os arquivos a partir de 2014\n",
+        "nome_diret = 'SISDEPEN_ARQS'\n",
+        "\n",
+        "arqs = os.listdir(nome_diret)\n",
         "\n",
         "arqs_usar = []\n",
         "\n",
         "for arq in arqs:\n",
-        "  if arq in ('prjun2020.xls', 'rnjun2020.xls'):\n",
+        "  # Arqs cujo nome fogem ao padrão\n",
+        "  # Como são de 2020 vou usar e já crescento na lista arqs_usar\n",
+        "  if arq in ('prjun2020.xls', 'rnjun2020.xls'): \n",
         "    arqs_usar.append(arq)\n",
         "    #print(arq)\n",
         "  else: \n",
@@ -73,7 +83,7 @@
         "\n",
         "len(arqs_usar)"
       ],
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -83,7 +93,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 56
         }
       ]
     },
@@ -93,9 +103,9 @@
         "id": "d_RNVikVvg6h",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 81
+          "height": 80
         },
-        "outputId": "1e2f6320-04b5-4f23-ba4a-70c09fe75625"
+        "outputId": "59fd2331-781b-4e5f-ffb2-440de2325be0"
       },
       "source": [
         "d = {'level': ['999'], 'value': [999], 'uf': ['999'], 'mes': ['999'], 'ano': [999], 'var': ['999']}\n",
@@ -110,13 +120,15 @@
         "aux2 = {'level': ['999'], 'masc': ['999'], 'fem': ['999'], 'misto': ['999'], 'total': [999], 'uf': ['999'], 'mes': ['999'], 'ano': [999], 'var': ['999']}\n",
         "df_totestab = pd.DataFrame(data = aux2)\n",
         "\n",
-        "df_psico = pd.DataFrame(data = d)\n",
+        "#var1\tvar4\tvar6\tvar8\tvar10\tvar12\tvar14\n",
+        "aux3 = {'level': ['999'], 'gen': ['999'], 'Efetivo': [999], 'Comissionado': [999], 'Terceirizado': [999], 'Temporário': [999], 'total': [999], 'uf': ['999'], 'mes': ['999'], 'ano': [999], 'var': ['999']}\n",
+        "df_psico = pd.DataFrame(data = aux3)\n",
         "\n",
         "df_suic = pd.DataFrame(data = aux)\n",
         "\n",
-        "df_suic"
+        "df_psico"
       ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,8 +153,11 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>level</th>\n",
-              "      <th>masc</th>\n",
-              "      <th>fem</th>\n",
+              "      <th>gen</th>\n",
+              "      <th>Efetivo</th>\n",
+              "      <th>Comissionado</th>\n",
+              "      <th>Terceirizado</th>\n",
+              "      <th>Temporário</th>\n",
               "      <th>total</th>\n",
               "      <th>uf</th>\n",
               "      <th>mes</th>\n",
@@ -161,18 +176,23 @@
               "      <td>999</td>\n",
               "      <td>999</td>\n",
               "      <td>999</td>\n",
+              "      <td>999</td>\n",
+              "      <td>999</td>\n",
+              "      <td>999</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "  level masc  fem  total   uf  mes  ano  var\n",
-              "0   999  999  999    999  999  999  999  999"
+              "  level  gen  Efetivo  Comissionado  Terceirizado  ...  total   uf  mes  ano  var\n",
+              "0   999  999      999           999           999  ...    999  999  999  999  999\n",
+              "\n",
+              "[1 rows x 11 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 58
         }
       ]
     },
@@ -188,11 +208,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xX0cc6JghLrd"
+        "id": "xX0cc6JghLrd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "17e129a1-3b6f-4b1c-f794-eed236809c74"
       },
       "source": [
         "for arq in arqs_usar:\n",
         "  # Criando variaveis a partir de slicing do nome do arq\n",
+        "  # Arqs cujo nome fogem ao padrão\n",
         "  if arq in ('prjun2020.xls', 'rnjun2020.xls'):\n",
         "    UF = arq[0:2]\n",
         "    MES = arq[2:5]\n",
@@ -204,7 +229,7 @@
         "\n",
         "\n",
         "  # Lendo os dados\n",
-        "  popcarcer = pd.read_excel('arqs_sisdepen' + '/' + arq,   \n",
+        "  popcarcer = pd.read_excel(nome_diret + '/' + arq,   \n",
         "                            skiprows = 7, \n",
         "                            names = [\"var0\", \"var1\", \"var2\", \"var3\", \"var4\", \"var5\",\n",
         "                              \"var6\", \"var7\", \"var8\", \"var9\", \"var10\", \"var11\",\n",
@@ -213,10 +238,11 @@
         "                            index_col = 0,\n",
         "                            header = None)\n",
         "  \n",
-        "  # Tentar: df['Meta'] = df['Meta'].fillna(method='pad') \n",
-        "  \n",
-        "  # Drop the rows where all elements are missing.\n",
+        "  # Excluir as linhas que são completamente de NA\n",
         "  popcarcer = popcarcer.dropna(how = 'all')\n",
+        "\n",
+        "  # Imputando as células mescladas com a ocorrência imediatamente anterior: \n",
+        "  popcarcer['var1'] = popcarcer['var1'].fillna(method = 'pad') \n",
         "  \n",
         "  # Info\n",
         "  infogeral = filtrar_linhas(popcarcer, 'População carcerária', UF, MES, ANO, 'pop')\n",
@@ -238,20 +264,45 @@
         "  cons = cons.rename(columns = {list(cons)[0]:'level', list(cons)[1]:'masc', list(cons)[2]:'fem', list(cons)[3]:'total'}) \n",
         "  df_cons = df_cons.append([cons])\n",
         "\n",
-        "  #print(arq)\n",
-        "\n",
         "  # Suicidios\n",
         "  suic = filtrar_linhas(popcarcer, 'Óbitos', UF, MES, ANO, 'suic')\n",
         "  suic = suic.rename(columns = {list(suic)[0]:'level', list(suic)[1]:'masc', list(suic)[2]:'fem', list(suic)[3]:'total'}) \n",
         "  df_suic = df_suic.append([suic])  \n",
         "\n",
         "  # Psicologos\n",
-        "  psico = filtrar_linhas(popcarcer, 'Terapeutas|Psicólogos|Psiquiatras|psiquiatras', UF, MES, ANO, 'psico')\n",
-        "  psico = psico.rename(columns = {list(psico)[0]:'level', list(psico)[1]:'value'})\n",
-        "  df_psico = df_psico.append([psico]) \n"
+        "  psico = filtrar_linhas(popcarcer, 'Terapeutas|Psicólogos|Psicólogos/as|Psiquiatras|psiquiatras', UF, MES, ANO, 'psico')\n",
+        "  psico = psico.rename(columns = {list(psico)[0]:'level', list(psico)[1]:'gen', \n",
+        "                                  list(psico)[2]:'Efetivo', list(psico)[3]:'Comissionado',\n",
+        "                                  list(psico)[4]:'Terceirizado', list(psico)[5]:'Temporário',\n",
+        "                                  list(psico)[6]:'total'})\n",
+        "\n",
+        "  df_psico = df_psico.append([psico]) \n",
+        "  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:28: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:28: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:28: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -259,13 +310,14 @@
         "id": "QBBfECbD17jc"
       },
       "source": [
+        "# Função que exclui a linha inicial que eu criei, tira NAs e ordena as linhas\n",
         "def ajeitar_ordenar_linhas(obj):\n",
         "  obj_fin = obj.query(' uf != \"999\" ')\n",
         "  obj_fin = obj_fin.dropna(axis = 'columns')\n",
         "  obj_fin = obj_fin.sort_values(by = ['uf', 'ano', 'mes'])\n",
         "  return obj_fin"
       ],
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -281,7 +333,7 @@
         "df_suic = ajeitar_ordenar_linhas(df_suic)\n",
         "df_psico = ajeitar_ordenar_linhas(df_psico)"
       ],
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -290,7 +342,7 @@
         "id": "1gAHTp6DOiT9"
       },
       "source": [
-        "df_suic"
+        "df_psico"
       ],
       "execution_count": null,
       "outputs": []
@@ -302,16 +354,16 @@
       },
       "source": [
         "# Gerando planilhas desses arqs\n",
-        "os.mkdir('dados')\n",
+        "#os.mkdir('SISDEPEN_SELECTEDVAR')\n",
         "\n",
-        "df_infogeral.to_csv('dados/df_infogeral.csv', index = False)\n",
-        "df_totestab.to_csv('dados/df_totestab.csv', index = False)\n",
-        "df_sala.to_csv('dados/df_sala.csv', index = False)\n",
-        "df_cons.to_csv('dados/df_cons.csv', index = False)\n",
-        "df_suic.to_csv('dados/df_suic.csv', index = False)\n",
-        "df_psico.to_csv('dados/df_psico.csv', index = False)"
+        "df_infogeral.to_csv('SISDEPEN_SELECTEDVAR/df_infogeral.csv', index = False)\n",
+        "df_totestab.to_csv('SISDEPEN_SELECTEDVAR/df_totestab.csv', index = False)\n",
+        "df_sala.to_csv('SISDEPEN_SELECTEDVAR/df_sala.csv', index = False)\n",
+        "df_cons.to_csv('SISDEPEN_SELECTEDVAR/df_cons.csv', index = False)\n",
+        "df_suic.to_csv('SISDEPEN_SELECTEDVAR/df_suic.csv', index = False)\n",
+        "df_psico.to_csv('SISDEPEN_SELECTEDVAR/df_psico.csv', index = False)"
       ],
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -319,16 +371,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         },
         "id": "_16lo3pwOaXp",
-        "outputId": "d1950a73-f17f-467a-c3bc-8201f2795002"
+        "outputId": "6cd94ca1-c31e-4da3-8e8e-71f436c2f53d"
       },
       "source": [
         "# Comprimindo os arqs p fazer download\n",
-        "shutil.make_archive('dados', 'zip', 'dados')"
+        "shutil.make_archive('SISDEPEN_SELECTEDVAR', 'zip', 'SISDEPEN_SELECTEDVAR')"
       ],
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,11 +389,11 @@
               "type": "string"
             },
             "text/plain": [
-              "'/content/dados.zip'"
+              "'/content/SISDEPEN_SELECTEDVAR.zip'"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 67
         }
       ]
     }
